--- a/downloads/index.html
+++ b/downloads/index.html
@@ -1,16 +1,16 @@
 <html><head>
     <title>e</title>
-    <link rel="stylesheet" href="https://parv66.tk/downloads/trade.css">
-    <link rel="stylesheet" href="https://parv66.tk/style.css">
-    <link rel="stylesheet" href="https://parv66.tk/gui/itemdrag.css">
-    <link rel="stylesheet" href="https://parv66.tk/gui/addonitems.css">
-    <link rel="stylesheet" href="https://parv66.tk/gui/itemhover.css">
+    <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/downloads/trade.css">
+    <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/style.css">
+    <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/gui/itemdrag.css">
+    <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/gui/addonitems.css">
+    <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/gui/itemhover.css">
     <meta name="viewport" content="width=device-width">
-    <meta property="og:type" content="parv66.tk/downloads/">
+    <meta property="og:type" content="parv66.github.io/parv66.inc/downloads/">
     <meta property="og:title" content="Addons!">
     <meta property="og:description" content="Download Page For Parv66's Latest Addons">
-    <meta property="og:url" content="https://parv66.tk/downloads/">
-    <meta property="og:image" content="https://parv66.tk/parv66.uwu.jpg">
+    <meta property="og:url" content="https://parv66.github.io/parv66.inc/downloads/">
+    <meta property="og:image" content="https://parv66.github.io/parv66.inc/parv66.uwu.jpg">
   </head>
   <body>
     <div id="minetip-tooltip" style="display: none; position: absolute; top: 386px; left: 244px;">Placeable Apples Addon</div>
@@ -18,11 +18,11 @@
     <div class="cage"><h1 class="white">Addons And Maps Download:</h1>
 <button id="toption0" class="toption">
     <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
-    <img class="tarrow" draggable="false" src="https://parv66.tk/gui/images/arrow.png" alt="">
+    <img class="tarrow" draggable="false" src="https://parv66.github.io/parv66.inc/gui/images/arrow.png" alt="">
 <a class="copperplusplus" id="copperplusplus" title="An Addon That Adds More Uses For Copper And New Mechanics!"><span class="minetext copperplusplus" data-mctitle="Copper++ Addon"></span></a></button>
 <button id="toption1" class="toption">
     <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
-    <img class="tarrow" draggable="false" src="https://parv66.tk/gui/images/arrow.png" alt="">
+    <img class="tarrow" draggable="false" src="https://parv66.github.io/parv66.inc/gui/images/arrow.png" alt="">
     <a class="papple" id="papple" title="An Addon That Makes Apples Placeable!"><span class="minetext papple" data-mctitle="Placeable Apples Addon"></span></a></button>
 <button id="toption2" class="toption"></button>
 <button id="toption3" class="toption"></button>
@@ -30,7 +30,7 @@
 <div class="main1">
      <h1 style="text-align: center;">Trade Panel</h1>
      <div class="tradepanel">
-    <div class="box tbox1" id="38"></div><img class="arrow" src="https://parv66.tk/gui/images/arrow.png" alt="" draggable="false"> 
+    <div class="box tbox1" id="38"></div><img class="arrow" src="https://parv66.github.io/parv66.inc/gui/images/arrow.png" alt="" draggable="false"> 
     <div class="tbox2"></div>
     <button id="tbtn" class="tbtn">Trade</button>
 </div>
@@ -96,8 +96,8 @@
 </div>
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://parv66.tk/downloads/trade.js"></script>
-    <script src="https://parv66.tk/gui/itemdrag.js"></script>
-    <script src="https://parv66.tk/gui/itemhover.js"></script>
+    <script src="https://parv66.github.io/parv66.inc/downloads/trade.js"></script>
+    <script src="https://parv66.github.io/parv66.inc/gui/itemdrag.js"></script>
+    <script src="https://parv66.github.io/parv66.inc/gui/itemhover.js"></script>
     </body>
 </html>
