--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 <button class="button mcbtn" id="fofbtnerror" style="display: none" onclick="location.href = 'https://parv66.github.io/parv66.inc/404/'">press this if you see this</button>
   <script>
   window.onload=function(){
-    //location.href = "https://parv66.github.io/parv66.inc/404/";
+    location.href = "https://parv66.github.io/parv66.inc/404/";
     setTimeout(function(){
       var FoFbtn = document.querySelector('#fofbtnerror');
       FoFbtn.style.display="block";
