--- a/404/index.html
+++ b/404/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/style.css">
     <title>Error: page does not exists</title>
     <script src="https://parv66.github.io/parv66.inc/gui/mcbtnclick.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
 <body>
 <h1>Hey There! You Seem Lost...</h1>
