--- a/downloads/index.html
+++ b/downloads/index.html
@@ -16,16 +16,16 @@
     <div id="minetip-tooltip" style="display: none; position: absolute; top: 386px; left: 244px;">Placeable Apples Addon</div>
     <div class="tradeSidePanel">
     <div class="cage"><h1 class="white">Addons And Maps Download:</h1>
-<button id="toption0" class="toption">
+<button id="toption0" class="toption mcbtn">
     <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
     <img class="tarrow" draggable="false" src="https://parv66.github.io/parv66.inc/gui/images/arrow.png" alt="">
 <a class="copperplusplus" id="copperplusplus" title="An Addon That Adds More Uses For Copper And New Mechanics!"><span class="minetext copperplusplus" data-mctitle="Copper++ Addon"></span></a></button>
-<button id="toption1" class="toption">
+<button id="toption1" class="toption mcbtn">
     <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
     <img class="tarrow" draggable="false" src="https://parv66.github.io/parv66.inc/gui/images/arrow.png" alt="">
     <a class="papple" id="papple" title="An Addon That Makes Apples Placeable!"><span class="minetext papple" data-mctitle="Placeable Apples Addon"></span></a></button>
-<button id="toption2" class="toption"></button>
-<button id="toption3" class="toption"></button>
+<button id="toption2" class="toption mcbtn"></button>
+<button id="toption3" class="toption mcbtn"></button>
 </div></div>
 <div class="main1">
      <h1 style="text-align: center;">Trade Panel</h1>
@@ -99,5 +99,6 @@
     <script src="https://parv66.github.io/parv66.inc/downloads/trade.js"></script>
     <script src="https://parv66.github.io/parv66.inc/gui/itemdrag.js"></script>
     <script src="https://parv66.github.io/parv66.inc/gui/itemhover.js"></script>
+    <script src="https://parv66.github.io/parv66.inc/gui/mcbtnclick.js"></script>
     </body>
 </html>
