--- a/downloads/index.html
+++ b/downloads/index.html
@@ -41,6 +41,7 @@
     <div class="box" id="1">
         <div class="item curr" id="currency" draggable="false">
             <a class="currency" title="good o' gold coins" draggable="false"><span class="minetext currency" draggable="false" data-mctitle="currency"></span></a>
+            <div class="number">64</div>
         </div>
       </div>
     <div class="box" id="2">
