--- a/downloads/index.html
+++ b/downloads/index.html
@@ -17,11 +17,11 @@
     <div class="tradeSidePanel">
     <div class="cage"><h1 class="white">Addons And Maps Download:</h1>
 <button id="toption0" class="toption mcbtn">
-    <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
+    <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"><div class="number">45$</div></span></a>
     <img class="tarrow" draggable="false" src="https://parv66.github.io/parv66.inc/gui/images/arrow.png" alt="">
 <a class="copperplusplus" id="copperplusplus" title="An Addon That Adds More Uses For Copper And New Mechanics!"><span class="minetext copperplusplus" data-mctitle="Copper++ Addon"></span></a></button>
 <button id="toption1" class="toption mcbtn">
-    <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
+    <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"><div class="number">27$</div></span></a>
     <img class="tarrow" draggable="false" src="https://parv66.github.io/parv66.inc/gui/images/arrow.png" alt="">
     <a class="papple" id="papple" title="An Addon That Makes Apples Placeable!"><span class="minetext papple" data-mctitle="Placeable Apples Addon"></span></a></button>
 <button id="toption2" class="toption mcbtn"></button>
@@ -47,11 +47,13 @@
     <div class="box" id="2">
         <div class="item curr" id="currency" draggable="false">
             <a class="currency" title="good o' gold coins" draggable="false"><span class="minetext currency" draggable="false" data-mctitle="currency"></span></a>
+            <div class="number">64</div>
         </div>
       </div>
     <div class="box" id="3">
       <div class="item curr" id="currency" draggable="false">
             <a class="currency" title="good o' gold coins" draggable="false"><span class="minetext currency" draggable="false" data-mctitle="currency"></span></a>
+          <div class="number">64</div>
         </div>
       </div>
     <div class="box" id="4"></div>
