--- a/downloads/index.html
+++ b/downloads/index.html
@@ -17,11 +17,11 @@
     <div class="tradeSidePanel">
     <div class="cage"><h1 class="white">Addons And Maps Download:</h1>
 <button id="toption0" class="toption mcbtn">
-    <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"><div class="number">45$</div></span></a>
+    <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
     <img class="tarrow" draggable="false" src="https://parv66.github.io/parv66.inc/gui/images/arrow.png" alt="">
 <a class="copperplusplus" id="copperplusplus" title="An Addon That Adds More Uses For Copper And New Mechanics!"><span class="minetext copperplusplus" data-mctitle="Copper++ Addon"></span></a></button>
 <button id="toption1" class="toption mcbtn">
-    <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"><div class="number">27$</div></span></a>
+    <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
     <img class="tarrow" draggable="false" src="https://parv66.github.io/parv66.inc/gui/images/arrow.png" alt="">
     <a class="papple" id="papple" title="An Addon That Makes Apples Placeable!"><span class="minetext papple" data-mctitle="Placeable Apples Addon"></span></a></button>
 <button id="toption2" class="toption mcbtn"></button>
