--- a/404/index.html
+++ b/404/index.html
@@ -10,11 +10,11 @@
 <h1>Hey There! You Seem Lost...</h1>
 <h2>This Isn't The Page You're Looking For...</h2>
 <br>
-<button class="button mcbtn" onclick="location.href = 'https://parv66.github.io/parv66.inc/';,1500"> > Take Help</button>
+<button class="button mcbtn" onclick="location.href = 'https://parv66.github.io/parv66.inc/' ,1500"> > Take Help</button>
 <br>
-<button class="button mcbtn" onclick="location.href = 'chrome://inducebrowsercrashforrealz"> > Leave</button>
+<button class="button mcbtn" onclick="location.href = 'chrome://inducebrowsercrashforrealz'"> > Leave</button>
 <br>
-<button class="button" onclick="location.href = '.';,1500"> > Ignore</button>
+<button class="button" onclick="location.href = '.' ,1500"> > Ignore</button>
 <audio id="buttonclick" src="https://parv66.github.io/parv66.inc/random.click.ogg"></audio>
 <img class="fofimg" src="https://parv66.github.io/parv66.inc/shaded-refine.png" alt="fofhi" height="300px">
 </body>
