--- a/index.html
+++ b/index.html
@@ -40,20 +40,21 @@
  <body id="body">
   <img src="logo.png" class="logo">
   <p>sidebar here<p>
-   <div id="menu" class="menu">
-            <button class="button mcbtn" onclick="location.href = 'https://parv66.github.io/parv66.inc';,1500">home</button>
-            <br>
-            <button class="button mcbtn" onclick="location.href = 'https://parv66.github.io/parv66.inc/about/';,1500">about</button>
-            <br>
-            <button class="button mcbtn" onclick="location.href = 'https://parv66.github.io/parv66.inc/creations/';,1500" test="https://mcpedl.com/user/parv66_yt/">creations</button>
-            <br>
-            <button class="button mcbtn" onclick="location.href = 'https://www.youtube.com/watch?v=dQw4w9WgXcQ';,1500">random</button>
-            <br>
-            <button class="button mcbtn" onclick="location.href = 'https://discordapp.com/users/622702599468220446/',1500">contact</button>
-            <br>
-            <button class="button mcbtn" onclick="err()">???</button>
-     <audio id="errors" src="error.666.ogg"></audio>
-   </div>
+  <div id="contextmenu"> 
+     <a style="margin: 0px;text-shadow: 0.125em 0.125em 0 #3F3F3F;">Context Menu</a>
+	    <p class="cinfo" style="color: #5555FF;text-shadow: 0.125em 0.125em 0 #232391;">Equipment</p><br>
+	    <p class="coption" style="margin-top: 5px;" href="https://parv66.github.io/parv66.inc/">Accommodation I</p><br>
+	    <p class="coption" href="https://parv66.github.io/parv66.inc/about">Particularity IV</p><br>
+    	<p class="coption" href="https://parv66.github.io/parv66.inc/creations">Creations III</p><br>
+    	<p class="coption" href="https://parv66.github.io/parv66.inc/downloads">Downloads IX</p><br>
+	    <p class="coption" href="https://parv66.github.io/parv66.inc/random">Random LXIX</p><br>
+	    <p class="coption" href="https://parv66.github.io/parv66.inc/contact">Associate II</p><br>
+	    <p class="coption" href="https://parv66.github.io/parv66.inc/random/CDXX">???</p><br>
+	    <br>
+	    <p class="coption" style="color:#fff">Durability: 69 / 420</p>
+	    <p class="cinfo">parv66:context_menu</p>
+	    <p class="cinfo">NBT: 5 tag(s)</p>
+</div>
   <footer>
    <h4>footer</h4>
    <a href="" class="cord"></a><a href="" class="youtube"></a>
