--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
      <script src="key.js"></script>
      <script src="https://parv66.github.io/parv66.inc/gui/mcbtnclick.js"></script>
-     <script src="https://parv66.github.io/parv66.inc/gui/contextmenu.js"></script>
+     <!--<script src="https://parv66.github.io/parv66.inc/gui/contextmenu.js"></script>-->
      <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/gui/contextmenu.css">
   </head>
  <body id="body">
