--- a/index.html
+++ b/index.html
@@ -40,21 +40,26 @@
  <body id="body">
   <img src="logo.png" class="logo">
   <p>sidebar here<p>
-  <div id="contextmenu"> 
-     <a style="margin: 0px;text-shadow: 0.125em 0.125em 0 #3F3F3F;">Context Menu</a>
-	    <p class="cinfo" style="color: #5555FF;text-shadow: 0.125em 0.125em 0 #232391;">Equipment</p><br>
-	    <p class="coption" style="margin-top: 5px;" href="https://parv66.github.io/parv66.inc/">Accommodation I</p><br>
-	    <p class="coption" href="https://parv66.github.io/parv66.inc/about">Particularity IV</p><br>
-    	<p class="coption" href="https://parv66.github.io/parv66.inc/creations">Creations III</p><br>
-    	<p class="coption" href="https://parv66.github.io/parv66.inc/downloads">Downloads IX</p><br>
-	    <p class="coption" href="https://parv66.github.io/parv66.inc/random">Random LXIX</p><br>
-	    <p class="coption" href="https://parv66.github.io/parv66.inc/contact">Associate II</p><br>
-	    <p class="coption" href="https://parv66.github.io/parv66.inc/random/CDXX">???</p><br>
-	    <br>
-	    <p class="coption" style="color:#fff">Durability: 69 / 420</p>
-	    <p class="cinfo">parv66:context_menu</p>
-	    <p class="cinfo">NBT: 5 tag(s)</p>
-</div>
+  
+	<div id="contextmenu" style="box-shadow: 2px 0px 0px 0px black,0px -2px 0px 0px black,0px 2px 0px 0px black,-2px 0px 0px 0px black;width: 210px;height: 280px;border: 2px solid #2C0863;position: fixed;background-color: #100010;background-color: rgba(16,0,16,0.94);padding: 0.380em;font-family: minefont;margin: 0.125em 0.25em;z-index: 6420;"><a style="margin: 0px;text-shadow: 0.125em 0.125em 0 #565656;color: #fff">Context Menu</a>
+	<a style="color: #5555FF;text-shadow: 0.125em 0.125em 0 #232391;margin:0px;">Equipment</a>
+	<br>
+	<a class="coption" href="https://parv66.github.io/parv66.inc/">Accommodation I</a>
+	<a class="coption" href="https://parv66.github.io/parv66.inc/about">Particularity IV</a>
+	<a class="coption" href="https://parv66.github.io/parv66.inc/creations">Creations III</a>
+	<a class="coption" href="https://parv66.github.io/parv66.inc/downloads">Downloads IX</a>
+	<a class="coption" href="https://parv66.github.io/parv66.inc/random">Random LXIX</a>
+	<a class="coption" href="https://parv66.github.io/parv66.inc/contact">Associate II</a>
+	<a class="coption" href="https://parv66.github.io/parv66.inc/random/CDXX">???</a>
+	<br>
+	<a style="color:#fff;text-decoration: none;text-shadow: 0.125em 0.125em 0 #4c4c4c;margin:0px;">Durability: 69 / 420</a>
+	<a style="text-shadow: 0.125em 0.125em 0 #222222;margin:0px;color:#555555;">parv66:context_menu</a>
+	<a style="text-shadow: 0.125em 0.125em 0 #222222;margin:0px;color:#555555;">NBT: 5 tag(s)</a>
+        </div>
+	 
+	 
+	 
+	 
   <footer>
    <h4>footer</h4>
    <a href="" class="cord"></a><a href="" class="youtube"></a>
