--- a/index.html
+++ b/index.html
@@ -41,20 +41,7 @@
   <img src="logo.png" class="logo">
   <p>sidebar here<p>
   
-	<div id="contextmenu" style="box-shadow: 2px 0px 0px 0px black,0px -2px 0px 0px black,0px 2px 0px 0px black,-2px 0px 0px 0px black;width: 210px;height: 280px;border: 2px solid #2C0863;position: fixed;background-color: #100010;background-color: rgba(16,0,16,0.94);padding: 0.380em;font-family: minefont;margin: 0.125em 0.25em;z-index: 6420;"><a style="margin: 0px;text-shadow: 0.125em 0.125em 0 #565656;color: #fff">Context Menu</a>
-	<a style="color: #5555FF;text-shadow: 0.125em 0.125em 0 #232391;margin:0px;">Equipment</a>
-	<br>
-	<a class="coption" href="https://parv66.github.io/parv66.inc/">Accommodation I</a>
-	<a class="coption" href="https://parv66.github.io/parv66.inc/about">Particularity IV</a>
-	<a class="coption" href="https://parv66.github.io/parv66.inc/creations">Creations III</a>
-	<a class="coption" href="https://parv66.github.io/parv66.inc/downloads">Downloads IX</a>
-	<a class="coption" href="https://parv66.github.io/parv66.inc/random">Random LXIX</a>
-	<a class="coption" href="https://parv66.github.io/parv66.inc/contact">Associate II</a>
-	<a class="coption" href="https://parv66.github.io/parv66.inc/random/CDXX">???</a>
-	<br>
-	<a style="color:#fff;text-decoration: none;text-shadow: 0.125em 0.125em 0 #4c4c4c;margin:0px;">Durability: 69 / 420</a>
-	<a style="text-shadow: 0.125em 0.125em 0 #222222;margin:0px;color:#555555;">parv66:context_menu</a>
-	<a style="text-shadow: 0.125em 0.125em 0 #222222;margin:0px;color:#555555;">NBT: 5 tag(s)</a>
+	<div id="contextmenu" style="box-shadow: 2px 0px 0px 0px black,0px -2px 0px 0px black,0px 2px 0px 0px black,-2px 0px 0px 0px black;width: auto;height: auto;border: 2px solid #2C0863;position: fixed;background-color: #100010;background-color: rgba(16,0,16,0.94);padding: 0.380em;font-family: minefont;margin: 0.125em 0.25em;z-index: 6420;display: flex;flex-wrap: wrap;align-content: flex-start;justify-content: flex-start;flex-direction: column;"><a style="margin: 0px;text-shadow: 0.125em 0.125em 0 #565656;color: #fff">Context Menu</a><a style="color: #5555FF;text-shadow: 0.125em 0.125em 0 #232391;margin:0px;">Equipment</a><a class="coption" style="margin-top: 10px;" href="https://parv66.github.io/parv66.inc/">Accommodation I</a><a class="coption" href="https://parv66.github.io/parv66.inc/about">Particularity IV</a><a class="coption" href="https://parv66.github.io/parv66.inc/creations">Creations III</a><a class="coption" href="https://parv66.github.io/parv66.inc/downloads">Downloads IX</a><a class="coption" href="https://parv66.github.io/parv66.inc/random">Random LXIX</a><a class="coption" href="https://parv66.github.io/parv66.inc/contact">Associate II</a><a class="coption" href="https://parv66.github.io/parv66.inc/random/CDXX">???</a><a style="color:#fff;text-decoration: none;text-shadow: 0.125em 0.125em 0 #4c4c4c;margin:0px;margin-top: 10px;">Durability: 69 / 420</a><a style="text-shadow: 0.125em 0.125em 0 #222222;margin:0px;color:#555555;">parv66:context_menu</a><a style="text-shadow: 0.125em 0.125em 0 #222222;margin:0px;color:#555555;">NBT: 5 tag(s)</a>
         </div>
 	 
 	 
