--- a/404/index.html
+++ b/404/index.html
@@ -8,6 +8,28 @@
     <script src="https://parv66.github.io/parv66.inc/gui/contextmenu.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
+  <style>
+    .fofimg {
+	    color: bisque;
+	    position: absolute;
+	    left: 12vw;
+	    top: 8vmax;
+	    height: 27vw;
+	    z-index: 2;
+	    padding: 10px;
+	    margin: 15px;
+	    border: whitesmoke none 15px;
+	    display: inline-block;
+    }
+    .fofdiv {
+      height: 41vmax;
+      z-index: 1;
+    }
+    .fofbtn {
+      left: 5%;
+      position: relative;
+    }
+  </style>
 <body>
 <div id="contextmenu" style="box-shadow:#000 2px 0 0 0,#000 0 -2px 0 0,#000 0 2px 0 0,#000 -2px 0 0 0;width:auto;height:auto;border:2px solid #2c0863;position:fixed;background-color:rgba(16,0,16,.94);padding:.38em;font-family:minefont;margin:.125em .25em;z-index:6420;display:flex;flex-flow:column wrap;place-content:flex-start;top:456px;left:221px"><a style="margin:0;text-shadow:.125em .125em 0 #3e3e3e;color:#fff;cursor:default">Context Menu</a> <a style="color:#55F;text-shadow:.125em .125em 0 #232391;margin:0;cursor:default">Equipment</a> <a class="coption" style="margin-top:10px;cursor:default;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/">Accommodation I</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/about">Particularity IV</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/creations">Creations III</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/downloads">Downloads IX</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/random">Random LXIX</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/contact">Associate II</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/random/CDXX">???</a> <a style="color:#fff;text-decoration:none;text-shadow:.125em .125em 0 #3e3e3e;margin:0;margin-top:10px;cursor:default">Durability: 69 / 420</a> <a style="text-shadow:.125em .125em 0 #222;margin:0;color:#555;cursor:default">parv66:context_menu</a> <a style="text-shadow:.125em .125em 0 #222;margin:0;color:#555;cursor:default">NBT: 5 tag(s)</a></div>  <img src="logo.png" class="logo">
 <h1>Hey There! You Seem Lost...</h1>
