--- a/contact/index.html
+++ b/contact/index.html
@@ -1,7 +1,7 @@
 <!DOC-type html>
 <html>
   <head>
-    <title>Contact PARV66<title>
+    <title>Contact PARV66</title>
     <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/style.css">
     <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/itemhover.css">
     <script src="https://parv66.github.io/parv66.inc/gui/itemhover.js"></script>
