--- a/contact/index.html
+++ b/contact/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/itemhover.css">
     <script src="https://parv66.github.io/parv66.inc/gui/itemhover.js"></script>
     <script src="https://parv66.github.io/parv66.inc/gui/mcbtnclick.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
     <div>hello</div>
