--- a/contact/index.html
+++ b/contact/index.html
@@ -3,25 +3,12 @@
   <head>
     <title>Contact PARV66</title>
     <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/style.css">
-    <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/itemhover.css">
+    <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/gui/itemhover.css">
     <script src="https://parv66.github.io/parv66.inc/gui/itemhover.js"></script>
     <script src="https://parv66.github.io/parv66.inc/gui/mcbtnclick.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
     <div>hello</div>
-    <script>
-    window.onload=function(){
-    var ado = document.createElement('audio');
-    ado.src = 'https://parv66.tk/random.click.ogg'
-    ado.id = 'Id1';
-    document.body.appendChild(ado);
-    console.log("element created")
-    let sound = document.querySelector('#Id1');
-    sound.volume = 0.5;
-    sound.currentTime = 0.00;
-    sound.play();
-    console.log("sound played")
-}   </script>
   </body>
 </html>
